// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser - Inline Directives > should correctly parse file level directives 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 68,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 68,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 69,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 69,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 76,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 68,
            "isIncomplete": false,
            "kind": 3,
            "start": 64,
            "text": "Type",
            "tokens": [
              {
                "FullStart": 60,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 60,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 60,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 4,
                "Start": 64,
                "Text": "Type",
                "Trailing": [],
                "Value": "Type",
              },
            ],
          },
          "start": 64,
          "value": [
            {
              "end": 76,
              "isIncomplete": false,
              "kind": 3,
              "start": 70,
              "text": "String",
              "tokens": [
                {
                  "FullStart": 70,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 6,
                  "Start": 70,
                  "Text": "String",
                  "Trailing": [
                    {
                      "FullStart": 76,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 76,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "String",
                },
              ],
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 58,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 58,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 59,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 59,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 51,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 51,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 52,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 52,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 76,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 58,
        "isIncomplete": false,
        "kind": 3,
        "start": 53,
        "text": "MyVar",
        "tokens": [
          {
            "FullStart": 53,
            "Kind": 600,
            "Leading": [],
            "Length": 5,
            "Start": 53,
            "Text": "MyVar",
            "Trailing": [],
            "Value": "MyVar",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 41,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 41,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 41,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 42,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 42,
      "statements": [],
      "type": {
        "end": 51,
        "isIncomplete": false,
        "kind": 3,
        "start": 43,
        "text": "Variable",
        "tokens": [
          {
            "FullStart": 43,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 43,
            "Text": "Variable",
            "Trailing": [],
            "Value": "Variable",
          },
        ],
      },
    },
  ],
  "directives": [
    {
      "defName": undefined,
      "defNameEnd": undefined,
      "defNameStart": undefined,
      "defType": "Variable",
      "defTypeEnd": 19,
      "defTypeStart": 11,
      "end": 20,
      "kind": 20,
      "name": "Deftype",
      "rawContent": "Deftype: Variable",
      "start": 1,
    },
    {
      "defName": undefined,
      "defNameEnd": undefined,
      "defNameStart": undefined,
      "defType": "Function",
      "defTypeEnd": 39,
      "defTypeStart": 31,
      "end": 40,
      "kind": 20,
      "name": "Deftype",
      "rawContent": "Deftype: Function",
      "start": 21,
    },
  ],
  "end": 77,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    21,
    41,
    42,
    60,
    77,
  ],
  "start": 0,
  "text": "
<Deftype: Variable>
<Deftype: Function>

[Variable: MyVar]
    Type: String
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 501,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "<",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 2,
      "Text": "Deftype",
      "Trailing": [],
      "Value": "Deftype",
    },
    {
      "FullStart": 9,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 9,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 10,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 10,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 11,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 11,
      "Text": "Variable",
      "Trailing": [],
      "Value": "Variable",
    },
    {
      "FullStart": 19,
      "Kind": 502,
      "Leading": [],
      "Length": 1,
      "Start": 19,
      "Text": ">",
      "Trailing": [
        {
          "FullStart": 20,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 20,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 21,
      "Kind": 501,
      "Leading": [],
      "Length": 1,
      "Start": 21,
      "Text": "<",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 22,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 22,
      "Text": "Deftype",
      "Trailing": [],
      "Value": "Deftype",
    },
    {
      "FullStart": 29,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 29,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 31,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 31,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 39,
      "Kind": 502,
      "Leading": [],
      "Length": 1,
      "Start": 39,
      "Text": ">",
      "Trailing": [
        {
          "FullStart": 40,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 40,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 41,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 41,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 41,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 42,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 43,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 43,
      "Text": "Variable",
      "Trailing": [],
      "Value": "Variable",
    },
    {
      "FullStart": 51,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 51,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 52,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 52,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 53,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 53,
      "Text": "MyVar",
      "Trailing": [],
      "Value": "MyVar",
    },
    {
      "FullStart": 58,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 58,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 59,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 59,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 60,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 60,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 60,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 4,
      "Start": 64,
      "Text": "Type",
      "Trailing": [],
      "Value": "Type",
    },
    {
      "FullStart": 68,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 68,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 69,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 69,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 70,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 70,
      "Text": "String",
      "Trailing": [
        {
          "FullStart": 76,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 76,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "String",
    },
    {
      "FullStart": 77,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 77,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser - Inline Directives > should correctly parse inline directives inside definitions 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 27,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 27,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 28,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 28,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [
        {
          "end": 60,
          "kind": 19,
          "name": "InUse",
          "rawContent": "InUse: Collection: RMColl",
          "start": 33,
          "targets": [
            {
              "defName": "RMColl",
              "defNameEnd": 59,
              "defNameStart": 53,
              "end": 59,
              "start": 41,
              "typeEnd": 51,
              "typeName": "Collection",
              "typeStart": 41,
            },
          ],
        },
      ],
      "end": 83,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 27,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "Test Directives",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 12,
            "Text": "Test",
            "Trailing": [
              {
                "FullStart": 16,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 16,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "Test",
          },
          {
            "FullStart": 17,
            "Kind": 600,
            "Leading": [],
            "Length": 10,
            "Start": 17,
            "Text": "Directives",
            "Trailing": [],
            "Value": "Directives",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 72,
            "isIncomplete": false,
            "kind": 3,
            "start": 69,
            "text": "SET",
            "tokens": [
              {
                "FullStart": 69,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 69,
                "Text": "SET",
                "Trailing": [],
                "Value": "SET",
              },
            ],
          },
          "args": [
            {
              "end": 79,
              "isIncomplete": false,
              "kind": 3,
              "start": 74,
              "text": "MyVar",
              "tokens": [
                {
                  "FullStart": 74,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 5,
                  "Start": 74,
                  "Text": "MyVar",
                  "Trailing": [],
                  "Value": "MyVar",
                },
              ],
            },
            {
              "end": 83,
              "kind": 4,
              "start": 81,
              "token": {
                "FullStart": 81,
                "Kind": 603,
                "Leading": [],
                "Length": 2,
                "Start": 81,
                "Text": "10",
                "Trailing": [
                  {
                    "FullStart": 83,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 83,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "10",
              },
              "value": 10,
            },
          ],
          "end": 83,
          "kind": 12,
          "label": {
            "end": 67,
            "isIncomplete": false,
            "kind": 3,
            "start": 65,
            "text": "01",
            "tokens": [
              {
                "FullStart": 61,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 61,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 61,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 65,
                "Text": "01",
                "Trailing": [],
                "Value": "01",
              },
            ],
          },
          "start": 65,
          "targetVariable": {
            "end": 79,
            "isIncomplete": false,
            "kind": 3,
            "start": 74,
            "text": "MyVar",
            "tokens": [
              {
                "FullStart": 74,
                "Kind": 600,
                "Leading": [],
                "Length": 5,
                "Start": 74,
                "Text": "MyVar",
                "Trailing": [],
                "Value": "MyVar",
              },
            ],
          },
          "valueExpression": {
            "end": 83,
            "kind": 4,
            "start": 81,
            "token": {
              "FullStart": 81,
              "Kind": 603,
              "Leading": [],
              "Length": 2,
              "Start": 81,
              "Text": "10",
              "Trailing": [
                {
                  "FullStart": 83,
                  "Kind": 6,
                  "Leading": [],
                  "Length": 1,
                  "Start": 83,
                  "Text": "
",
                  "Trailing": [],
                  "Value": undefined,
                },
              ],
              "Value": "10",
            },
            "value": 10,
          },
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 84,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    29,
    61,
    84,
  ],
  "start": 0,
  "text": "
[Function: Test Directives]
    <InUse: Collection: RMColl>
    01: SET: MyVar: 10
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 12,
      "Text": "Test",
      "Trailing": [
        {
          "FullStart": 16,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 16,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Test",
    },
    {
      "FullStart": 17,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 17,
      "Text": "Directives",
      "Trailing": [],
      "Value": "Directives",
    },
    {
      "FullStart": 27,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 27,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 28,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 28,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 29,
      "Kind": 501,
      "Leading": [
        {
          "FullStart": 29,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 29,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 33,
      "Text": "<",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 34,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 34,
      "Text": "InUse",
      "Trailing": [],
      "Value": "InUse",
    },
    {
      "FullStart": 39,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 39,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 40,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 40,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 41,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 41,
      "Text": "Collection",
      "Trailing": [],
      "Value": "Collection",
    },
    {
      "FullStart": 51,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 51,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 52,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 52,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 53,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 53,
      "Text": "RMColl",
      "Trailing": [],
      "Value": "RMColl",
    },
    {
      "FullStart": 59,
      "Kind": 502,
      "Leading": [],
      "Length": 1,
      "Start": 59,
      "Text": ">",
      "Trailing": [
        {
          "FullStart": 60,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 60,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 61,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 61,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 61,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 65,
      "Text": "01",
      "Trailing": [],
      "Value": "01",
    },
    {
      "FullStart": 67,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 67,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 68,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 68,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 69,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 69,
      "Text": "SET",
      "Trailing": [],
      "Value": "SET",
    },
    {
      "FullStart": 72,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 72,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 73,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 73,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 74,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 74,
      "Text": "MyVar",
      "Trailing": [],
      "Value": "MyVar",
    },
    {
      "FullStart": 79,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 79,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 80,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 80,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 81,
      "Kind": 603,
      "Leading": [],
      "Length": 2,
      "Start": 81,
      "Text": "10",
      "Trailing": [
        {
          "FullStart": 83,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 83,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "10",
    },
    {
      "FullStart": 84,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 84,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser - Inline Directives > should not confuse relational operators for directives 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 28,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 28,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 29,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 100,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 28,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "Relational Check",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 10,
            "Start": 12,
            "Text": "Relational",
            "Trailing": [
              {
                "FullStart": 22,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 22,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "Relational",
          },
          {
            "FullStart": 23,
            "Kind": 600,
            "Leading": [],
            "Length": 5,
            "Start": 23,
            "Text": "Check",
            "Trailing": [],
            "Value": "Check",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 40,
            "isIncomplete": false,
            "kind": 3,
            "start": 38,
            "text": "IF",
            "tokens": [
              {
                "FullStart": 38,
                "Kind": 600,
                "Leading": [],
                "Length": 2,
                "Start": 38,
                "Text": "IF",
                "Trailing": [],
                "Value": "IF",
              },
            ],
          },
          "args": [
            {
              "end": 54,
              "kind": 16,
              "left": {
                "arguments": [],
                "end": 49,
                "functionName": {
                  "end": 49,
                  "isIncomplete": false,
                  "kind": 3,
                  "start": 44,
                  "text": "Value",
                  "tokens": [
                    {
                      "FullStart": 44,
                      "Kind": 600,
                      "Leading": [],
                      "Length": 5,
                      "Start": 44,
                      "Text": "Value",
                      "Trailing": [
                        {
                          "FullStart": 49,
                          "Kind": 601,
                          "Leading": [],
                          "Length": 1,
                          "Start": 49,
                          "Text": " ",
                          "Trailing": [],
                          "Value": undefined,
                        },
                      ],
                      "Value": "Value",
                    },
                  ],
                },
                "kind": 7,
                "start": 42,
              },
              "operator": {
                "FullStart": 50,
                "Kind": 501,
                "Leading": [],
                "Length": 1,
                "Start": 50,
                "Text": "<",
                "Trailing": [
                  {
                    "FullStart": 51,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 51,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": undefined,
              },
              "right": {
                "end": 54,
                "kind": 4,
                "start": 52,
                "token": {
                  "FullStart": 52,
                  "Kind": 603,
                  "Leading": [],
                  "Length": 2,
                  "Start": 52,
                  "Text": "10",
                  "Trailing": [
                    {
                      "FullStart": 54,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 54,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "10",
                },
                "value": 10,
              },
              "start": 42,
            },
          ],
          "condition": {
            "end": 54,
            "kind": 16,
            "left": {
              "arguments": [],
              "end": 49,
              "functionName": {
                "end": 49,
                "isIncomplete": false,
                "kind": 3,
                "start": 44,
                "text": "Value",
                "tokens": [
                  {
                    "FullStart": 44,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 5,
                    "Start": 44,
                    "Text": "Value",
                    "Trailing": [
                      {
                        "FullStart": 49,
                        "Kind": 601,
                        "Leading": [],
                        "Length": 1,
                        "Start": 49,
                        "Text": " ",
                        "Trailing": [],
                        "Value": undefined,
                      },
                    ],
                    "Value": "Value",
                  },
                ],
              },
              "kind": 7,
              "start": 42,
            },
            "operator": {
              "FullStart": 50,
              "Kind": 501,
              "Leading": [],
              "Length": 1,
              "Start": 50,
              "Text": "<",
              "Trailing": [
                {
                  "FullStart": 51,
                  "Kind": 601,
                  "Leading": [],
                  "Length": 1,
                  "Start": 51,
                  "Text": " ",
                  "Trailing": [],
                  "Value": undefined,
                },
              ],
              "Value": undefined,
            },
            "right": {
              "end": 54,
              "kind": 4,
              "start": 52,
              "token": {
                "FullStart": 52,
                "Kind": 603,
                "Leading": [],
                "Length": 2,
                "Start": 52,
                "Text": "10",
                "Trailing": [
                  {
                    "FullStart": 54,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 54,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "10",
              },
              "value": 10,
            },
            "start": 42,
          },
          "elseStatements": [],
          "end": 100,
          "endStatement": {
            "action": {
              "end": 100,
              "isIncomplete": false,
              "kind": 3,
              "start": 94,
              "text": "END IF",
              "tokens": [
                {
                  "FullStart": 94,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 3,
                  "Start": 94,
                  "Text": "END",
                  "Trailing": [
                    {
                      "FullStart": 97,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 97,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "END",
                },
                {
                  "FullStart": 98,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 2,
                  "Start": 98,
                  "Text": "IF",
                  "Trailing": [
                    {
                      "FullStart": 100,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 100,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "IF",
                },
              ],
            },
            "args": [],
            "end": 100,
            "kind": 12,
            "label": {
              "end": 92,
              "isIncomplete": false,
              "kind": 3,
              "start": 90,
              "text": "03",
              "tokens": [
                {
                  "FullStart": 86,
                  "Kind": 603,
                  "Leading": [
                    {
                      "FullStart": 86,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 4,
                      "Start": 86,
                      "Text": "    ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Length": 2,
                  "Start": 90,
                  "Text": "03",
                  "Trailing": [],
                  "Value": "03",
                },
              ],
            },
            "start": 90,
          },
          "kind": 12,
          "label": {
            "end": 36,
            "isIncomplete": false,
            "kind": 3,
            "start": 34,
            "text": "01",
            "tokens": [
              {
                "FullStart": 30,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 30,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 30,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 34,
                "Text": "01",
                "Trailing": [],
                "Value": "01",
              },
            ],
          },
          "start": 34,
          "statements": [
            {
              "action": {
                "end": 70,
                "isIncomplete": false,
                "kind": 3,
                "start": 67,
                "text": "SET",
                "tokens": [
                  {
                    "FullStart": 67,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 3,
                    "Start": 67,
                    "Text": "SET",
                    "Trailing": [],
                    "Value": "SET",
                  },
                ],
              },
              "args": [
                {
                  "end": 78,
                  "isIncomplete": false,
                  "kind": 3,
                  "start": 72,
                  "text": "Status",
                  "tokens": [
                    {
                      "FullStart": 72,
                      "Kind": 600,
                      "Leading": [],
                      "Length": 6,
                      "Start": 72,
                      "Text": "Status",
                      "Trailing": [],
                      "Value": "Status",
                    },
                  ],
                },
                {
                  "end": 85,
                  "kind": 4,
                  "start": 80,
                  "token": {
                    "FullStart": 80,
                    "Kind": 604,
                    "Leading": [],
                    "Length": 5,
                    "Start": 80,
                    "Text": ""Low"",
                    "Trailing": [
                      {
                        "FullStart": 85,
                        "Kind": 6,
                        "Leading": [],
                        "Length": 1,
                        "Start": 85,
                        "Text": "
",
                        "Trailing": [],
                        "Value": undefined,
                      },
                    ],
                    "Value": "Low",
                  },
                  "value": ""Low"",
                },
              ],
              "end": 85,
              "kind": 12,
              "label": {
                "end": 61,
                "isIncomplete": false,
                "kind": 3,
                "start": 59,
                "text": "02",
                "tokens": [
                  {
                    "FullStart": 55,
                    "Kind": 603,
                    "Leading": [
                      {
                        "FullStart": 55,
                        "Kind": 601,
                        "Leading": [],
                        "Length": 4,
                        "Start": 55,
                        "Text": "    ",
                        "Trailing": [],
                        "Value": undefined,
                      },
                    ],
                    "Length": 2,
                    "Start": 59,
                    "Text": "02",
                    "Trailing": [],
                    "Value": "02",
                  },
                ],
              },
              "start": 59,
              "targetVariable": {
                "end": 78,
                "isIncomplete": false,
                "kind": 3,
                "start": 72,
                "text": "Status",
                "tokens": [
                  {
                    "FullStart": 72,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 6,
                    "Start": 72,
                    "Text": "Status",
                    "Trailing": [],
                    "Value": "Status",
                  },
                ],
              },
              "valueExpression": {
                "end": 85,
                "kind": 4,
                "start": 80,
                "token": {
                  "FullStart": 80,
                  "Kind": 604,
                  "Leading": [],
                  "Length": 5,
                  "Start": 80,
                  "Text": ""Low"",
                  "Trailing": [
                    {
                      "FullStart": 85,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 85,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "Low",
                },
                "value": ""Low"",
              },
            },
          ],
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 101,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    30,
    55,
    86,
    101,
  ],
  "start": 0,
  "text": "
[Function: Relational Check]
    01: IF: $$Value < 10
    02:     SET: Status: "Low"
    03: END IF
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 12,
      "Text": "Relational",
      "Trailing": [
        {
          "FullStart": 22,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 22,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Relational",
    },
    {
      "FullStart": 23,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 23,
      "Text": "Check",
      "Trailing": [],
      "Value": "Check",
    },
    {
      "FullStart": 28,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 28,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 29,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 29,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 30,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 30,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 34,
      "Text": "01",
      "Trailing": [],
      "Value": "01",
    },
    {
      "FullStart": 36,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 36,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 37,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 37,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 38,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 38,
      "Text": "IF",
      "Trailing": [],
      "Value": "IF",
    },
    {
      "FullStart": 40,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 40,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 41,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 41,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 42,
      "Kind": 204,
      "Leading": [],
      "Length": 2,
      "Start": 42,
      "Text": "$$",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 44,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 44,
      "Text": "Value",
      "Trailing": [
        {
          "FullStart": 49,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 49,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Value",
    },
    {
      "FullStart": 50,
      "Kind": 501,
      "Leading": [],
      "Length": 1,
      "Start": 50,
      "Text": "<",
      "Trailing": [
        {
          "FullStart": 51,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 51,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 52,
      "Kind": 603,
      "Leading": [],
      "Length": 2,
      "Start": 52,
      "Text": "10",
      "Trailing": [
        {
          "FullStart": 54,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 54,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "10",
    },
    {
      "FullStart": 55,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 55,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 55,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 59,
      "Text": "02",
      "Trailing": [],
      "Value": "02",
    },
    {
      "FullStart": 61,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 61,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 62,
          "Kind": 601,
          "Leading": [],
          "Length": 5,
          "Start": 62,
          "Text": "     ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 67,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 67,
      "Text": "SET",
      "Trailing": [],
      "Value": "SET",
    },
    {
      "FullStart": 70,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 70,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 71,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 71,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 72,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 72,
      "Text": "Status",
      "Trailing": [],
      "Value": "Status",
    },
    {
      "FullStart": 78,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 78,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 79,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 79,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 80,
      "Kind": 604,
      "Leading": [],
      "Length": 5,
      "Start": 80,
      "Text": ""Low"",
      "Trailing": [
        {
          "FullStart": 85,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 85,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Low",
    },
    {
      "FullStart": 86,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 86,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 86,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 90,
      "Text": "03",
      "Trailing": [],
      "Value": "03",
    },
    {
      "FullStart": 92,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 92,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 93,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 93,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 94,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 94,
      "Text": "END",
      "Trailing": [
        {
          "FullStart": 97,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 97,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "END",
    },
    {
      "FullStart": 98,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 98,
      "Text": "IF",
      "Trailing": [
        {
          "FullStart": 100,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 100,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "IF",
    },
    {
      "FullStart": 101,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 101,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;
